--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "autoload-dev": {
         "psr-4": {
             "ListenNotes\\PodcastApiClient\\": [
-                "tests/",
-                "tests/Fake"
+                "tests/"
             ]
         }
     },
