Update composer lock file.

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
     },
     "scripts": {
         "test": "phpunit"
-    }    
+    },
+    "config": {
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
+        }
+    }
 }
